# fill-in-the-blank

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md
server/: Cargo.toml
server/src/: main.rs
server/src/actors/: dtos.rs  messages.rs  mod.rs
server/src/actors/api/: inbound_message.rs  mod.rs  outbound_message.rs  websocket.rs
server/src/actors/api/inbound_message/: connect.rs  create_lobby.rs  global_chat.rs  join_lobby.rs  leave_lobby.rs  list_lobbies.rs  lobby_chat.rs  lobby_create.rs  lobby_join.rs  lobby_leave.rs  lobby_list.rs  logout.rs  mod.rs  player_connect.rs  player_logout.rs  player_reconnect.rs  reconnect.rs
server/src/actors/api/message/: connection_failed.rs  error.rs  global_chat.rs  lobby_chat.rs  lobby_info.rs  lobby_joined.rs  lobby_list.rs  mod.rs  player_connected.rs  user_connected.rs
server/src/actors/game/: game.rs
server/src/actors/player/: message.rs  mod.rs  player.rs
server/src/actors/player/message/: connected.rs  create_lobby.rs  disconnected.rs  error.rs  global_chat_receive.rs  global_chat_send.rs  join_lobby.rs  leave_lobby.rs  list_lobbies.rs  lobby_chat_receive.rs  lobby_chat_send.rs  lobby_create.rs  lobby_info.rs  lobby_join.rs  lobby_joined.rs  lobby_leave.rs  lobby_list.rs  lobby_list_req.rs  lobby_list_res.rs  logout.rs  mod.rs  player_connected.rs  player_disconnected.rs  player_logout.rs  receive_global_chat.rs  receive_lobby_chat.rs  send_global_chat.rs  send_lobby_chat.rs
server/src/actors/server/: message.rs  mod.rs  server.rs
server/src/actors/server/message/: connect.rs  create_lobby.rs  destroy_session.rs  join_lobby.rs  mod.rs  (+12 more)
server/src/engine/: mod.rs  server.rs  server_message.rs  websocket.rs  websocket_message.rs
server/src/game/: mod.rs  player.rs  player_message.rs
server/static/: index.html
(+41 files in other folders)
