[package]
name = "fitb"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-rt = "1.1.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"

log = "0.4.14"
env_logger = "0.8.3"

serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

uuid = { version = "0.8.2", features = ["serde", "v4"]}

chrono = { version = "0.4.19", features = ["serde"] }
