[package]
name = "fitb"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

[dependencies]
actix = { version = "0.13", default-features = false, features = ["macros"] }
actix-files = "0.6"
actix-rt = "2"
actix-web = { version = "4", default-features = false }
actix-web-actors = "4"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"]}
